# dtecflex-extract-api

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile.backend  Dockerfile.frontend  README.md  deploy_backend.sh  docker-compose.yml  docker-start.sh  gunicorn.conf.py  pyproject.toml  run.sh
src/: main.py
src/dtecflex_extract_api/config/: auth.py  celery.py  database.py  database_setup.py
src/dtecflex_extract_api/resources/auth/: auth_router.py  auth_service.py
src/dtecflex_extract_api/resources/noticias/: noticias_router.py  noticias_service.py  schemas.py
src/dtecflex_extract_api/resources/noticias/entities/: noticia_raspada.py
src/dtecflex_extract_api/resources/noticias/schemas/: noticia_create.py  noticia_nome_update.py
src/dtecflex_extract_api/resources/usuario/entities/: usuario.py
src/dtecflex_extract_api/resources/ws/: ws_router.py
src/dtecflex_extract_api/services/: transfer_service.py
src/dtecflex_extract_api/shared/utils/: get_current_user.py
src/dtecflex_extract_api/tasks/: __init__.py  test.py  transfer.py
src/dtecflex_extract_api/utils/: pubsub.py
